--- a/YT.html
+++ b/YT.html
@@ -143,7 +143,7 @@
                     <span>Test new features</span>
                 </div>
                 <span class="copyright">&copy; YouTube Clone</span>
-                <a class="github-link-footer" href="https://github.com/May6months/Netflix-May6months" target="_blank">link to May6months GitHub &rarr; </a>
+                <a class="github-link-footer" href="https://github.com/May6months?tab=repositories" target="_blank">link to May6months GitHub &rarr; </a>
             </div>
         </div>
         <div class="videos">
