--- a/YT.html
+++ b/YT.html
@@ -7,16 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="YT.css">
-
     
-    <!-- mine start -->
-<!-- before  <script type="module" src="/YT.js" defer></script> -->
-  <!--after-->  <script type="module" src="/YouTube-May6months/YT.js" defer></script>
- <!--/YouTube-May6months -->
-    <!-- mine end -->
+  <script type="module" src="/YouTube-May6months/YT.js" defer></script>
 
-
-    
     <title>YT</title>
 </head>
 <body>
@@ -150,7 +143,7 @@
                     <span>Test new features</span>
                 </div>
                 <span class="copyright">&copy; YouTube Clone</span>
-                <a class="github-link-footer" href="https://github.com/May6months?tab=repositories" target="_blank">link to May6months GitHub &rarr; </a>
+                <a class="github-link-footer" href="https://github.com/May6months/YouTube-May6months" target="_blank">link to May6months GitHub &rarr; </a>
             </div>
         </div>
         <div class="videos">
