--- a/YT.html
+++ b/YT.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="YT.css">
-    
   <script type="module" src="/YouTube-May6months/YT.js" defer></script>
-
+  <link rel="icon" type="image/png" sizes="32x32" href="https://img.icons8.com/color/48/youtube-play.png" alt="youtube-play">
     <title>YT</title>
 </head>
 <body>
