--- a/YT.html
+++ b/YT.html
@@ -13,6 +13,19 @@
 </head>
 <body>
 
+<!-- start spinner-->
+ <div class="loader-wrapper"> 
+  <div class="inner-wrapper"> 
+    <div class="circle-wrapper"> 
+        <div class="loader"></div>
+        <div class="seconds"></div>
+    </div>
+        <div class="countdown"></div>
+  </div>
+ </div>
+<!-- end spinner-->
+
+
     <div class="navbar">
         <div class="logo">
           <i class="material-icons">view_headline</i>
